unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__ApexJobClassName__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ApexJobClassName__c</fullName>
    <label>Apex Job Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>