unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__ApexJobID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ApexJobID__c</fullName>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>