unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__BatchControlRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__BatchControlRecordID__c</fullName>
    <label>Batch Control Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>