unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__CurrentChainNumber__c.field-meta.xml
<CustomField>
    <fullName>ffirule__CurrentChainNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Chain Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>