unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__FailedRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__FailedRecordID__c</fullName>
    <label>Failed Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>