unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__FromProgressBar__c.field-meta.xml
<CustomField>
    <fullName>ffirule__FromProgressBar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Progress Bar</label>
    <type>Checkbox</type>
</CustomField>