unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ProcessName__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>