unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__ProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ProgressInformation__c</fullName>
    <label>Progress Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>