unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__SuccessfulRecordID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SuccessfulRecordID__c</fullName>
    <label>Successful Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>