unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/fields/ffirule__UseDefaultConstructor__c.field-meta.xml
<CustomField>
    <fullName>ffirule__UseDefaultConstructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Constructor</label>
    <type>Checkbox</type>
</CustomField>