unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/listViews/ffirule__All.listView-meta.xml
<ListView>
    <fullName>ffirule__All</fullName>
    <columns>NAME</columns>
    <columns>ffirule__Status__c</columns>
    <columns>ffirule__ApexJobClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>