unpackaged/main/default/objects/ffirule__fflib_BatchProcess__c/listViews/ffirule__All1.listView-meta.xml
<ListView>
    <fullName>ffirule__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>